fix(text-field): text-field's label overlap with long prefix.
Fixes #3485

--- a/packages/vuetify/src/stylus/components/_select.styl
+++ b/packages/vuetify/src/stylus/components/_select.styl
@@ -38,6 +38,14 @@ theme(v-select, 'v-select')
     ::placeholder
       color: transparent !important
 
+  &:not(.v-input--is-dirty)
+    &:not(.v-input--is-focused)
+      .v-text-field__prefix
+          line-height: 20px
+          position: absolute
+          top: 7px
+          transition: $primary-transition
+
   &.v-text-field--enclosed:not(.v-text-field--single-line)
     .v-select__selections
       padding-top: 24px
